# tokenkit

./: .gitignore  .yardopts  Gemfile  LICENSE.txt  README.md  Rakefile  tokenkit.gemspec
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml
benchmarks/: cache_test.rb  final_comparison.rb  tokenizer_benchmark.rb
docs/: ARCHITECTURE.md  PERFORMANCE.md  README.md
ext/tokenkit/: Cargo.toml  extconf.rb
ext/tokenkit/src/: config.rs  error.rs  lib.rs
ext/tokenkit/src/tokenizer/: base.rs  char_group.rs  edge_ngram.rs  grapheme.rs  keyword.rs  letter.rs  lowercase.rs  mod.rs  ngram.rs  path_hierarchy.rs  pattern.rs  sentence.rs  unicode.rs  url_email.rs  whitespace.rs
lib/: tokenkit.rb
lib/tokenkit/: config.rb  config_builder.rb  config_compat.rb  configuration.rb  regex_converter.rb  version.rb
sig/: tokenkit.rbs
spec/: char_group_tokenizer_spec.rb  configuration_immutability_spec.rb  configuration_spec.rb  configuration_state_machine_spec.rb  edge_ngram_tokenizer_spec.rb  error_handling_spec.rb  grapheme_tokenizer_spec.rb  keyword_tokenizer_spec.rb  letter_tokenizer_spec.rb  lowercase_tokenizer_spec.rb  ngram_tokenizer_spec.rb  path_hierarchy_tokenizer_spec.rb  pattern_tokenizer_spec.rb  per_call_options_spec.rb  preserve_patterns_edge_cases_spec.rb  preserve_patterns_spec.rb  regex_flags_spec.rb  sentence_tokenizer_spec.rb  spec_helper.rb  thread_safety_spec.rb  tokenizer_instance_spec.rb  tokenkit_spec.rb  unicode_tokenizer_spec.rb  url_email_tokenizer_spec.rb  whitespace_tokenizer_spec.rb
